# code-reviewer

./: .gitignore  README.md  cli.py  client.py  pyproject.toml  requirements.txt  server.py
code_reviewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
